--- a/princeton-I/queues/project/pom.xml
+++ b/princeton-I/queues/project/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>ai.lcong</groupId>
-  <artifactId>percolation</artifactId>
+  <artifactId>queues</artifactId>
   <version>1.0-SNAPSHOT</version>
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -105,7 +105,7 @@
   <artifactId>maven-assembly-plugin</artifactId>
   <configuration>
     <descriptor>src/assembly/bin.xml</descriptor>
-    <finalName>${project.name}-submission</finalName>
+    <finalName>assignment</finalName>
   </configuration>
   <executions>
     <execution>
